--- a/styles/hero-section.css
+++ b/styles/hero-section.css
@@ -1,3 +1,61 @@
+:root {
+  --yellow: #FACF0F;
+}
+
 .hero {
   z-index: 25;
+  background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)),url("../assets/background.svg");
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.top-section {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 40px;
+  margin-top: 130px;
+  letter-spacing: 1px;;
+}
+
+.middle-section {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 18px;
+}
+
+.bottom-section {
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+
+.experience-btn {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 15px 40px;
+  border: none;
+  background-color: var(--yellow);
+  border-radius: 5px;
+  box-shadow: 1px 1px 18px 0px rgba(89, 89, 89, 0.85);
+  cursor: pointer;
+}
+
+@media (min-width: 580px) {
+  .top-section {
+    margin-top: 220px;
+  }
+
+  .hero-content {
+    height: 92vh;
+  }
 }
