--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,57 @@
+:root {
+  --yellow: #FACF0F;
+}
+
 body {
-  margin: 0;
+  margin: 0px;
   font-family: "Source Sans Pro", sans-serif;
   padding-top: 65px;
 }
 
 p {
   margin: 0;
+  color: #666;
+}
+
+h1 {
+  margin-top: 0px;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 33px;
+  letter-spacing: 2px;
+}
+
+h3 {
+  font-size: 22px;
+}
+
+.btn {
+  text-transform: uppercase;
+  font-weight: bold;
+  border: none;
+  background-color: var(--yellow);
+  border-radius: 5px;
+  box-shadow: 1px 1px 18px 0px rgba(89, 89, 89, 0.85);
+  cursor: pointer;
+}
+
+.section-header {
+  position: relative;
+}
+
+.section-header::after {
+  content: '';
+  position: absolute;
+  top: calc(100% + 1.2rem);
+  left: 50%;
+  height: 5px;
+  width: 2rem;
+  background: var(--yellow);
+  transform: translateX(-50%);
+  border-radius: 5px;
+}
+
+.secondary-header {
+  margin-top: 60px;
+  letter-spacing: 0.8px;
 }
