--- a/styles/sidenav.css
+++ b/styles/sidenav.css
@@ -19,12 +19,13 @@
 }
 
 .side-nav a {
+  text-transform: uppercase;
   text-decoration: none;
   font-size: 25px;
   color: black;
   display: block;
   transition: 0.3s;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .side-nav a:hover {
