--- a/styles/global.css
+++ b/styles/global.css
@@ -33,6 +33,7 @@ h3 {
   border-radius: 5px;
   box-shadow: 1px 1px 18px 0px rgba(89, 89, 89, 0.85);
   cursor: pointer;
+  transition: font-size 0.15s;
 }
 
 .section-header {
