--- a/styles/about-section.css
+++ b/styles/about-section.css
@@ -36,6 +36,7 @@
 
 .contact-btn:hover {
   font-size: 15px;
+  color: white;
 }
 
 .skills .secondary-header {
@@ -56,10 +57,13 @@
   font-size: 14px;
   transition: background-color 0.15s;
   transition: color 0.15s;
+  transition: font-size 0.15s;
+  cursor: default;
 }
 
 .skill-chips .chip:hover {
   color: white;
   background-color: var(--yellow);
   box-shadow: 1px 1px 18px 0px rgba(89, 89, 89, 0.85);
+  font-size: 14.5px;
 }
