--- a/styles/footer.css
+++ b/styles/footer.css
@@ -40,15 +40,11 @@
 
 .footer-links img {
   height: 50px;
+  transition: height 0.15s;
 }
 
-.horizontal-line {
-  margin-top: 25px;
-  content: '';
-  background-color: gray;
-  border-radius: 5px;
-  width: 100%;
-  height: 0.5px;
+.footer-links img:hover {
+  height: 53px;
 }
 
 .copyright-text {
