--- a/styles/hero-section.css
+++ b/styles/hero-section.css
@@ -5,6 +5,7 @@
 .hero {
   z-index: 25;
   background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)),url("../assets/background.svg");
+  position: relative;
 }
 
 .hero-content {
@@ -45,6 +46,7 @@
 
 .about-btn:hover {
   font-size: 18px;
+  color: white;
 }
 
 @media (min-width: 580px) {
@@ -54,5 +56,40 @@
 
   .hero-content {
     height: 92vh;
+  }
+}
+
+.hero-sidebar {
+  display: none;
+  background: rgb(42, 42, 42);
+  position: absolute;
+  top: 280px;
+  left: -2px;
+  padding: 10px 9px 5px 7px;
+  border-radius: 4px;
+}
+
+.hero-links {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.hero-links img {
+  height: 40px;
+  transition: height 0.15s;
+}
+
+.hero-links img:hover {
+  height: 42px;
+}
+
+.hero-links a {
+  text-decoration: none;
+}
+
+@media (min-width: 900px) {
+  .hero-sidebar {
+    display: block;
   }
 }
