--- a/styles/sidenav.css
+++ b/styles/sidenav.css
@@ -16,20 +16,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .side-nav a {
   text-transform: uppercase;
   text-decoration: none;
+  font-weight: bold;
   font-size: 25px;
   color: black;
   display: block;
   transition: 0.3s;
   margin-top: 30px;
+  background-color: transparent;
+  padding: 5px 8px;
+  border-radius: 5px;
+  transition: background-color 0.15s;
+  transition: color 0.15s;
 }
 
 .side-nav a:hover {
-  color: var(--yellow);
+  background-color: var(--yellow);
+  color: white;
 }
 
 .side-nav .close-btn {
