--- a/styles/hero-section.css
+++ b/styles/hero-section.css
@@ -35,7 +35,10 @@
 
 .bottom-section {
   margin-top: 50px;
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about-btn {
@@ -46,6 +49,22 @@
 
 .about-btn:hover {
   font-size: 18px;
+  color: white;
+}
+
+.bottom-section i {
+  margin-top: 120px;
+  margin-bottom: 40px;
+  cursor: pointer;
+  background-color: transparent;
+  padding: 8px;
+  border-radius: 5px;
+  transition: background-color 0.15s;
+  transition: color 0.15s;
+}
+
+.bottom-section i:hover {
+  background-color: var(--yellow);
   color: white;
 }
 
