--- a/styles/hero-section.css
+++ b/styles/hero-section.css
@@ -6,9 +6,12 @@
   z-index: 25;
   background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)),url("../assets/background.svg");
   position: relative;
+  width: 100%;
+  overflow-y: hidden;
 }
 
 .hero-content {
+  overflow-y: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
