--- a/styles/header.css
+++ b/styles/header.css
@@ -49,6 +49,7 @@
   background-color: transparent;
   transition: background-color 0.15s;
   cursor: pointer;
+  color: black;
 }
 
 .hamburger-menu:hover {
