--- a/styles/experience-section.css
+++ b/styles/experience-section.css
@@ -2,6 +2,13 @@
   background-color: white;
   padding-bottom: 70px;
   padding-top: 70px;
+  zoom: 115%;
+}
+
+@media (max-width: 450px) {
+  .experience {
+    zoom: 100%;
+  }
 }
 
 .experience-content {
