--- a/styles/hero-section.css
+++ b/styles/hero-section.css
@@ -8,6 +8,7 @@
   position: relative;
   width: 100%;
   overflow-y: hidden;
+  zoom: 100%;
 }
 
 .hero-content {
@@ -86,7 +87,7 @@
   display: none;
   background: rgb(42, 42, 42);
   position: absolute;
-  top: 280px;
+  top: 250px;
   left: -2px;
   padding: 10px 9px 5px 7px;
   border-radius: 4px;
