removed font-size transition on skill chips

--- a/styles/about-section.css
+++ b/styles/about-section.css
@@ -1,5 +1,5 @@
 :root {
-  --yellow: #FACF0F;
+  --yellow: #facf0f;
 }
 
 .about {
@@ -64,7 +64,6 @@
   font-size: 14px;
   transition: background-color 0.15s;
   transition: color 0.15s;
-  transition: font-size 0.15s;
   cursor: default;
 }
 
@@ -72,5 +71,4 @@
   color: white;
   background-color: var(--yellow);
   box-shadow: 1px 1px 18px 0px rgba(89, 89, 89, 0.85);
-  font-size: 14.5px;
 }
