--- a/styles/hero-section.css
+++ b/styles/hero-section.css
@@ -1,13 +1,20 @@
 :root {
-  --yellow: #FACF0F;
+  --yellow: #facf0f;
 }
 
 .hero {
   z-index: 25;
-  background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)),url("../assets/background.svg");
+  background: linear-gradient(
+      to right,
+      rgba(245, 245, 245, 0.8),
+      rgba(245, 245, 245, 0.8)
+    ),
+    url("../assets/background.svg");
   position: relative;
   width: 100%;
+  height: calc(100vh - 65px);
   overflow-y: hidden;
+  overflow-x: hidden;
   zoom: 100%;
 }
 
@@ -16,10 +23,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   overflow-x: hidden;
   width: 85%;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: -100px;
 }
 
 .top-section {
@@ -27,8 +37,7 @@
   text-transform: uppercase;
   font-weight: bold;
   font-size: 40px;
-  margin-top: 130px;
-  letter-spacing: 1px;;
+  letter-spacing: 1px;
 }
 
 .middle-section {
@@ -39,7 +48,6 @@
 
 .bottom-section {
   margin-top: 50px;
-  /* margin-bottom: 100px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -58,8 +66,7 @@
 }
 
 .bottom-section i {
-  margin-top: 120px;
-  margin-bottom: 40px;
+  margin-top: 100px;
 }
 
 @media (min-width: 580px) {
@@ -76,10 +83,11 @@
   display: none;
   background: rgb(42, 42, 42);
   position: absolute;
-  top: 250px;
+  top: calc(50% - 150px);
   left: -2px;
   padding: 10px 9px 5px 7px;
   border-radius: 4px;
+  overflow-x: hidden;
 }
 
 .hero-links {
