--- a/styles/hero-section.css
+++ b/styles/hero-section.css
@@ -20,16 +20,16 @@
 
 .hero-content {
   overflow-y: hidden;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow-x: hidden;
   width: 85%;
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -100px;
+  /* margin-top: -100px; */
 }
 
 .top-section {
@@ -76,6 +76,7 @@
 
   .hero-content {
     height: 92vh;
+    margin-top: -100px;
   }
 }
 
