--- a/styles/contact-section.css
+++ b/styles/contact-section.css
@@ -1,9 +1,14 @@
 :root {
-  --yellow: #FACF0F;
+  --yellow: #facf0f;
 }
 
 .contact {
-  background: linear-gradient(to right,rgba(245,245,245,.8),rgba(245,245,245,.8)),url("../assets/background.svg");
+  background: linear-gradient(
+      to right,
+      rgba(245, 245, 245, 0.8),
+      rgba(245, 245, 245, 0.8)
+    ),
+    url("../assets/background.svg");
   padding-top: 70px;
   padding-bottom: 70px;
   zoom: 115%;
@@ -38,9 +43,9 @@
 }
 
 @media (min-width: 900px) {
- .contact-container {
-  flex-direction: row;
- }
+  .contact-container {
+    flex-direction: row;
+  }
 }
 
 .contact i {
@@ -66,9 +71,11 @@
   border-radius: 5px;
   transition: background-color 0.15s;
   transition: color 0.15s;
+  transition: font-size 0.15s;
 }
 
 .contact-value a:hover {
   background-color: var(--yellow);
   color: white;
+  font-size: 19.5px;
 }
